# vhdl-compiler

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  compile.sh  compile_commands.json  tree.dot
grammar/: VHDL.g4  VHDLLexer.g4  VHDLParser.g4
src/: ASTBuilder.cpp  ASTBuilder.hpp  Interpreter.cpp  Interpreter.hpp  SemanticChecker.cpp  SemanticChecker.hpp  ast.hpp  main.cpp
tests/fixtures/: arch_entity_mismatch.vhd  hello_word.vhd  minimal_entity.vhd  mismatched_entity.vhd
